# connect4

./: CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.cpp
include/: test_class.h
sfml/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
